--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-zoom-pan-image",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "React component to zoom in & out, and pan image",
   "main": "dist/index.js",
   "repository": "git@github.com:ivanmaulana/react-zoom-pan-image.git",
@@ -28,33 +28,33 @@
     "react-dom": ">=16.0.0"
   },
   "dependencies": {
-    "emotion": "^9.2.3",
-    "react-emotion": "^9.2.3"
+    "emotion": "9.2.3",
+    "react-emotion": "9.2.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "copy-webpack-plugin": "^4.5.1",
-    "css-loader": "^0.28.11",
-    "cypress": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "husky": "^0.14.3",
-    "jest": "^23.3.0",
-    "lint-staged": "^7.2.0",
-    "prettier": "^1.13.5",
-    "query-string": "^6.1.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "start-server-and-test": "^1.4.1",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4"
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.3",
+    "babel-loader": "7.1.4",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-preset-env": "1.7.0",
+    "babel-preset-react": "6.24.1",
+    "copy-webpack-plugin": "4.5.1",
+    "css-loader": "0.28.11",
+    "cypress": "3.0.1",
+    "html-webpack-plugin": "3.2.0",
+    "husky": "0.14.3",
+    "jest": "23.3.0",
+    "lint-staged": "7.2.0",
+    "prettier": "1.13.5",
+    "query-string": "6.1.0",
+    "react": "16.4.1",
+    "react-dom": "16.4.1",
+    "start-server-and-test": "1.4.1",
+    "style-loader": "0.21.0",
+    "webpack": "4.12.0",
+    "webpack-cli": "3.0.8",
+    "webpack-dev-server": "3.1.4"
   },
   "files": [
     "dist"
